enforce serializability in java-centric apis & allow construction of operators without java implementations