@@ -18,6 +18,14 @@
 
 package org.apache.wayang.java.operators;
 
+import java.io.Serializable;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.stream.Stream;
+
 import org.apache.wayang.basic.data.Tuple2;
 import org.apache.wayang.basic.operators.CartesianOperator;
 import org.apache.wayang.core.optimizer.OptimizationContext;
@@ -33,25 +41,17 @@ import org.apache.wayang.java.channels.JavaChannelInstance;
 import org.apache.wayang.java.channels.StreamChannel;
 import org.apache.wayang.java.execution.JavaExecutor;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 /**
  * Java implementation of the {@link CartesianOperator}.
  */
-public class JavaCartesianOperator<InputType0, InputType1>
-        extends CartesianOperator<InputType0, InputType1>
+public class JavaCartesianOperator<I0 extends Serializable, I1 extends Serializable>
+        extends CartesianOperator<I0, I1>
         implements JavaExecutionOperator {
 
     /**
      * Creates a new instance.
      */
-    public JavaCartesianOperator(DataSetType<InputType0> inputType0, DataSetType<InputType1> inputType1) {
+    public JavaCartesianOperator(final DataSetType<I0> inputType0, final DataSetType<I1> inputType1) {
         super(inputType0, inputType1);
     }
 
@@ -60,80 +60,70 @@ public class JavaCartesianOperator<InputType0, InputType1>
      *
      * @param that that should be copied
      */
-    public JavaCartesianOperator(CartesianOperator<InputType0, InputType1> that) {
+    public JavaCartesianOperator(final CartesianOperator<I0, I1> that) {
         super(that);
     }
 
     @Override
-    @SuppressWarnings("unchecked")
     public Tuple<Collection<ExecutionLineageNode>, Collection<ChannelInstance>> evaluate(
-            ChannelInstance[] inputs,
-            ChannelInstance[] outputs,
-            JavaExecutor javaExecutor,
-            OptimizationContext.OperatorContext operatorContext) {
+            final ChannelInstance[] inputs,
+            final ChannelInstance[] outputs,
+            final JavaExecutor javaExecutor,
+            final OptimizationContext.OperatorContext operatorContext) {
         if (inputs.length != 2) {
             throw new IllegalArgumentException("Cannot evaluate: Illegal number of input streams.");
         }
 
-        Collection<ExecutionLineageNode> executionLineageNodes = new LinkedList<>();
-        Collection<ChannelInstance> producedChannelInstances = new LinkedList<>();
-        ExecutionLineageNode probingExecutionLineageNode = new ExecutionLineageNode(operatorContext);
+        final Collection<ExecutionLineageNode> executionLineageNodes = new LinkedList<>();
+        final Collection<ChannelInstance> producedChannelInstances = new LinkedList<>();
+        final ExecutionLineageNode probingExecutionLineageNode = new ExecutionLineageNode(operatorContext);
         probingExecutionLineageNode.add(LoadProfileEstimators.createFromSpecification(
-                "wayang.java.cartesian.load.probing", javaExecutor.getConfiguration()
-        ));
-        ExecutionLineageNode indexingExecutionLineageNode = new ExecutionLineageNode(operatorContext);
+                "wayang.java.cartesian.load.probing", javaExecutor.getConfiguration()));
+        final ExecutionLineageNode indexingExecutionLineageNode = new ExecutionLineageNode(operatorContext);
         indexingExecutionLineageNode.add(LoadProfileEstimators.createFromSpecification(
-                "wayang.java.cartesian.load.indexing", javaExecutor.getConfiguration()
-        ));
+                "wayang.java.cartesian.load.indexing", javaExecutor.getConfiguration()));
 
-        StreamChannel.Instance output = (StreamChannel.Instance) outputs[0];
-        ChannelInstance materializedInput, probingInput;
-        if (inputs[0] instanceof CollectionChannel.Instance) {
-            final Collection<InputType0> collection = ((CollectionChannel.Instance) inputs[0]).provideCollection();
-            final Stream<InputType1> stream = ((JavaChannelInstance) inputs[1]).provideStream();
-            output.<Tuple2<InputType0, InputType1>>accept(
+        final StreamChannel.Instance output = (StreamChannel.Instance) outputs[0];
+        final ChannelInstance materializedInput;
+        final ChannelInstance probingInput;
+
+        if (inputs[0] instanceof final CollectionChannel.Instance collectionChannelInstance) {
+            final Collection<I0> collection = collectionChannelInstance.provideCollection();
+            final Stream<I1> stream = ((JavaChannelInstance) inputs[1]).provideStream();
+            output.<Tuple2<I0, I1>>accept(
                     stream.flatMap(e1 -> collection.stream().map(
-                            e0 -> new Tuple2<>(e0, e1)
-                    ))
-            );
+                            e0 -> new Tuple2<>(e0, e1))));
             materializedInput = inputs[0];
             probingInput = inputs[1];
             probingExecutionLineageNode.addPredecessor(materializedInput.getLineage());
 
-        } else if (inputs[1] instanceof CollectionChannel.Instance) {
-            final Stream<InputType0> stream = ((JavaChannelInstance) inputs[0]).provideStream();
-            final Collection<InputType1> collection = ((CollectionChannel.Instance) inputs[1]).provideCollection();
-            output.<Tuple2<InputType0, InputType1>>accept(
-                    stream.flatMap(e0 -> collection.stream().map(
-                            e1 -> new Tuple2<>(e0, e1)
-                    ))
-            );
+        } else if (inputs[1] instanceof final CollectionChannel.Instance collectionChannelInstance) {
+            final Stream<I0> stream = ((JavaChannelInstance) inputs[0]).provideStream();
+            final Collection<I1> collection = collectionChannelInstance.provideCollection();
+            output.<Tuple2<I0, I1>>accept(
+                    stream.flatMap(e0 -> collection.stream().map(e1 -> new Tuple2<>(e0, e1))));
             materializedInput = inputs[1];
             probingInput = inputs[0];
             probingExecutionLineageNode.addPredecessor(materializedInput.getLineage());
 
-        } else if (operatorContext.getInputCardinality(0).getGeometricMeanEstimate() <= operatorContext.getInputCardinality(1).getGeometricMeanEstimate()) {
+        } else if (operatorContext.getInputCardinality(0).getGeometricMeanEstimate() <= operatorContext
+                .getInputCardinality(1).getGeometricMeanEstimate()) {
             // Fallback: Materialize one side.
-            final Collection<InputType0> collection = (Collection<InputType0>) ((JavaChannelInstance) inputs[0]).provideStream().collect(Collectors.toList());
-            final Stream<InputType1> stream = ((JavaChannelInstance) inputs[1]).provideStream();
-            output.<Tuple2<InputType0, InputType1>>accept(
+            final Collection<I0> collection = ((JavaChannelInstance) inputs[0]).<I0>provideStream().toList();
+            final Stream<I1> stream = ((JavaChannelInstance) inputs[1]).provideStream();
+            output.<Tuple2<I0, I1>>accept(
                     stream.flatMap(e1 -> collection.stream().map(
-                            e0 -> new Tuple2<>(e0, e1)
-                    ))
-            );
+                            e0 -> new Tuple2<>(e0, e1))));
             materializedInput = inputs[0];
             probingInput = inputs[1];
             indexingExecutionLineageNode.addPredecessor(materializedInput.getLineage());
             indexingExecutionLineageNode.collectAndMark(executionLineageNodes, producedChannelInstances);
-
         } else {
-            final Collection<InputType1> collection = (Collection<InputType1>) ((JavaChannelInstance) inputs[1]).provideStream().collect(Collectors.toList());
-            final Stream<InputType0> stream = ((JavaChannelInstance) inputs[0]).provideStream();
-            output.<Tuple2<InputType0, InputType1>>accept(
+            final Collection<I1> collection = ((JavaChannelInstance) inputs[1]).<I1>provideStream().toList();
+            final Stream<I0> stream = ((JavaChannelInstance) inputs[0]).provideStream();
+            output.<Tuple2<I0, I1>>accept(
                     stream.flatMap(e0 -> collection.stream().map(
-                            e1 -> new Tuple2<>(e0, e1)
-                    ))
-            );
+                            e1 -> new Tuple2<>(e0, e1))));
             materializedInput = inputs[1];
             probingInput = inputs[0];
             indexingExecutionLineageNode.addPredecessor(materializedInput.getLineage());
@@ -151,20 +141,19 @@ public class JavaCartesianOperator<InputType0, InputType1>
     }
 
     @Override
-    protected ExecutionOperator createCopy() {
-        return new JavaCartesianOperator<>(this.getInputType0(), this.getInputType1());
-    }
-
-    @Override
-    public List<ChannelDescriptor> getSupportedInputChannels(int index) {
+    public List<ChannelDescriptor> getSupportedInputChannels(final int index) {
         assert index <= this.getNumInputs() || (index == 0 && this.getNumInputs() == 0);
         return Arrays.asList(CollectionChannel.DESCRIPTOR, StreamChannel.DESCRIPTOR);
     }
 
     @Override
-    public List<ChannelDescriptor> getSupportedOutputChannels(int index) {
+    public List<ChannelDescriptor> getSupportedOutputChannels(final int index) {
         assert index <= this.getNumOutputs() || (index == 0 && this.getNumOutputs() == 0);
         return Collections.singletonList(StreamChannel.DESCRIPTOR);
     }
 
+    @Override
+    protected ExecutionOperator createCopy() {
+        return new JavaCartesianOperator<>(this.getInputType0(), this.getInputType1());
+    }
 }
