@@ -18,6 +18,14 @@
 
 package org.apache.wayang.spark.operators;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+
 import org.apache.wayang.basic.data.Tuple2;
 import org.apache.wayang.basic.function.ProjectionDescriptor;
 import org.apache.wayang.core.function.ReduceDescriptor;
@@ -25,16 +33,8 @@ import org.apache.wayang.core.platform.ChannelInstance;
 import org.apache.wayang.core.types.DataSetType;
 import org.apache.wayang.core.types.DataUnitType;
 import org.apache.wayang.spark.channels.RddChannel;
+
 import org.junit.jupiter.api.Test;
-
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * Test suite for {@link SparkReduceByOperator}.
@@ -44,32 +44,29 @@ class SparkReduceByOperatorTest extends SparkOperatorTestBase {
     @Test
     void testExecution() {
         // Prepare test data.
-        List<Tuple2<String, Integer>> inputList = Arrays.stream("aaabbccccdeefff".split(""))
+        final List<Tuple2<String, Integer>> inputList = Arrays.stream("aaabbccccdeefff".split(""))
                 .map(string -> new Tuple2<>(string, 1))
-                .collect(Collectors.toList());
-        RddChannel.Instance input = this.createRddChannelInstance(inputList);
-        RddChannel.Instance output = this.createRddChannelInstance();
-
+                .toList();
+        final RddChannel.Instance input = this.createRddChannelInstance(inputList);
+        final RddChannel.Instance output = this.createRddChannelInstance();
 
         // Build the reduce operator.
-        SparkReduceByOperator<Tuple2<String, Integer>, String> reduceByOperator =
-                new SparkReduceByOperator<>(
-                        DataSetType.createDefaultUnchecked(Tuple2.class),
-                        new ProjectionDescriptor<>(
-                                DataUnitType.createBasicUnchecked(Tuple2.class),
-                                DataUnitType.createBasic(String.class),
-                                "field0"),
-                        new ReduceDescriptor<>(
-                                (a, b) -> {
-                                    a.field1 += b.field1;
-                                    return a;
-                                }, DataUnitType.createGroupedUnchecked(Tuple2.class),
-                                DataUnitType.createBasicUnchecked(Tuple2.class)
-                        ));
+        final SparkReduceByOperator<Tuple2<String, Integer>, String> reduceByOperator = new SparkReduceByOperator<>(
+                DataSetType.createDefaultUnchecked(Tuple2.class),
+                new ProjectionDescriptor<>(
+                        DataUnitType.createBasicUnchecked(Tuple2.class),
+                        DataUnitType.createBasic(String.class),
+                        "field0"),
+                new ReduceDescriptor<>(
+                        (a, b) -> {
+                            a.setField1(a.getField1() + b.getField1());
+                            return a;
+                        }, DataUnitType.createGroupedUnchecked(Tuple2.class),
+                        DataUnitType.createBasicUnchecked(Tuple2.class)));
 
         // Set up the ChannelInstances.
-        final ChannelInstance[] inputs = new ChannelInstance[]{input};
-        final ChannelInstance[] outputs = new ChannelInstance[]{output};
+        final ChannelInstance[] inputs = new ChannelInstance[] { input };
+        final ChannelInstance[] outputs = new ChannelInstance[] { output };
 
         // Execute.
         this.evaluate(reduceByOperator, inputs, outputs);
@@ -78,7 +75,7 @@ class SparkReduceByOperatorTest extends SparkOperatorTestBase {
         final Iterable<Tuple2<String, Integer>> result = output.<Tuple2<String, Integer>>provideRdd().collect();
         final Set<Tuple2<String, Integer>> resultSet = new HashSet<>();
         result.forEach(resultSet::add);
-        final Tuple2[] expectedResults = {
+        final Tuple2<?,?>[] expectedResults = {
                 new Tuple2<>("a", 3),
                 new Tuple2<>("b", 2),
                 new Tuple2<>("c", 4),
